fixed search bar, bg image and navbar alignment

--- a/public/stylesheets/classes.css
+++ b/public/stylesheets/classes.css
@@ -16,9 +16,9 @@
 
 .class-page-banner-inner {
   width: fit-content;
-  padding: 40px 0;
+  /* padding: 40px 0; */
   margin: 0 auto;
-  margin-top: 80px;
+  /* margin-top: 80px; */
   text-align: center;
   /* vertical-align: middle; */
 }
@@ -178,9 +178,7 @@
 }
 
 @media only screen and (max-width: 760px){
-  .class-page-banner{
-    height: 50vw;
-  }
+  
   .class-page-banner-inner {
     /* padding:40px 0; */
     margin-top: 0;
@@ -210,9 +208,7 @@
 }
 
 @media only screen and (max-width: 599px){
-    .class-page-banner{
-      height: 50vw;
-    }
+   
   
     .class-page-banner-inner {
       padding: 30px 0;
