--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ body {
   max-width: 100%;
   /* margin-left: 20px; */
   /* margin-right: 20px; */
-  /* margin-bottom: 20px; */
+  margin-bottom: 20px;
   padding: 20px;
   border-bottom: #111 2px solid;
   font-size: 24px;
